# ConfidentialClient

./: .gitignore  Dockerfile  README.md  garbage  phase1-work-orders.json  pyproject.toml
.github/workflows/: ci.yml
apps/lambda/ach_summary/: handler.py
apps/lambda/authorizer/: handler.py
infrastructure/terraform/: alb.tf  apigateway.tf  cognito.tf  dynamodb.tf  ecs.tf  elasticache.tf  iam.tf  kms.tf  lambda_authorizer.tf  locals.tf  outputs.tf  s3_cloudfront.tf  secrets.tf  security_groups.tf  sqs.tf  ssm.tf  variables.tf  versions.tf  vpc.tf  waf.tf
kafka-ocp-provisioner/: pom.xml
kafka-ocp-provisioner/src/main/java/com/confidentialclient/kafka/ocp/: KafkaOcpApp.java
sql/oracle/: V001__schema_foundation.sql  V010__location_master.sql  V011__staging_ach.sql  V020__bgfs_staging.sql  V030__operations_exceptions.sql  V031__stamping_execution_log.sql
src/bridge/: config.py  main.py
src/bridge/api/: change_fund.py  operations.py  pos.py  reports.py
src/bridge/middleware/: correlation.py
tests/: test_health.py
