[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bridge"
version = "0.1.0"
description = "Bridge FastAPI service (WO-5+ domain APIs)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "redis>=5.0",
  "boto3>=1.34",
  "oracledb>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/bridge"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
